--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.2
   provider:
+  fluttertoast: ^8.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
